<resources>
    <string name="app_name">CompTIA Network Plus Prep</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="continue_btn">Continue</string>
    <string name="sample_question_1">This is a sample question 1. Answer One is the correct answer for now.  All others are false for testing</string>
    <string name="answer_1_1">I am answer 1.1</string>
    <string name="answer_1_2">I am answer 1.2</string>
    <string name="answer_1_3">I am answer 1.3</string>
    <string name="answer_1_4">I am answer 1.4</string>

    <string name="sample_question_2">This is sample questions 2.  Answer One is the correct answer for now.  All others are false for testing</string>
    <string name="answer_2_1">I am answer 2.1</string>
    <string name="answer_2_2">I am answer 2.2</string>
    <string name="answer_2_3">I am answer 2.3</string>
    <string name="answer_2_4">I am answer 2.4</string>
</resources>
